#87 img spacing fixes

--- a/assets/post.css
+++ b/assets/post.css
@@ -47,12 +47,12 @@ ul, ol, dl, figure, hr {
 img {
   max-width: 100%;
   vertical-align: middle;
-  padding: 1em 0;
 }
 
 /* FIGURES */
 figure > img {
   display: block;
+  padding: 0.5em 0;
 }
 figcaption {
   max-width: 35em;
@@ -242,8 +242,8 @@ header {
 }
 #nav-logo{
   height: 30px;
-  padding-right: 20px;
-  padding-left: 5px;
+  padding: 0 20px 0 5px;
+
   overflow: hidden;
   display: inline;
 }
@@ -255,6 +255,7 @@ header {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
   display: inline-block;
   z-index: 3;
+  margin: auto;
 }
 .nav-wrapper {
   position: absolute;
